# graphio

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  Makefile  README.md  docker-compose.yml  example_enhanced_dataset.py  local.py  mkdocs.yml  model.py  myapp.py  pyproject.toml  requirements.txt  run_test.sh  run_test_local_env.sh  run_test_tox.sh  setup.py  test_neo4j_compose.yml  test_neo4j_compose_apple_silicon.yml  test_neo4j_compose_github_actions.yml  test_requirements.txt  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build_documentation.yml  deploy_package.yml  run_test.yml  test.yml  test_neo4j_driver.yml  test_py2neo.yml
demo/: graphio_demo.ipynb
docs/: basic_workflow.rst  conf.py  getting_started.rst  index.md  index.rst  metadata.rst  model.rst  nodesets.rst  objects.rst  queries.rst  relsets.rst  requirements.txt  serialize.rst
docs/api_reference/: base.md  nodemodel.md  nodeset.md  relationship.md  relationshipset.md
docs/details/: bulk.md  datasets.md  details.md  ogm.md
docs/getting_started/: bulk.md  hybrid.md  index.md  ogm.md
docs/stylesheets/: extra.css
examples/: ncbi_gene.py  ncbi_gene_mapping.py
graphio/: __init__.py  config.py  defaults.py  graph.py  helper.py  model.py  queries.py  utils.py
graphio/bulk/: __init__.py  nodeset.py  queries.py  query_utils.py  relationshipset.py
graphio/csv/: temp.py
graphio/neo4j/: queries.py
graphio/objects/: __init__.py  _model.py  datacontainer.py  helper.py  model.py  nodeset.py  properties.py  relationship.py  relationshipset.py  unstructured_nodeset.py  unstructured_relationshipset.py  update.py
graphio/ogm/: __init__.py  model.py  queries.py  query_utils.py
graphio/queries/: __init__.py  query_generator.py  query_parameters.py
graphio/transform/: tocsv.py
test/: conftest.py  test_error_handling.py  test_graph.py  test_helper.py  test_integration.py  test_model.py  test_queries.py  test_query_utils.py  test_utils.py
test/bulk/: test_nodeset.py  test_nodeset_deduplication.py  test_relationshipset.py
test/files/: custom_keys_nodes_csv_json.json  custom_keys_rel_csv_json.csv  custom_keys_rel_csv_json.json  nodes_csv_json.csv  nodes_csv_json.json  rels_csv_json.json
test/ogm/: test_model.py  (+1 more)
(+10 files in other folders)
